Added activity log api
